src/objects/Insured_Item__c.object
<CustomObject>
    <fields>
        <fullName>Covered_by_Aetna__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered by Aetna</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covered_by_Kaiser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered by Kaiser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covered_by_United_Healthcare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered by United Healthcare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covered_by_VA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered by VA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dosage_Form__c</fullName>
        <label>Dosage Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TABLET, FILM COATED</fullName>
                </value>
                <value>
                    <fullName>TABLET</fullName>
                </value>
                <value>
                    <fullName>GRANULE, DELAYED RELEASE</fullName>
                </value>
                <value>
                    <fullName>INJECTION, SOLUTION</fullName>
                </value>
                <value>
                    <fullName>CAPSULE</fullName>
                </value>
                <value>
                    <fullName>AEROSOL, METERED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Coverage_Status_Code__c</fullName>
        <label>Drug Coverage Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_NDC__c</fullName>
        <label>Product NDC</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ORAL</fullName>
                </value>
                <value>
                    <fullName>SUBCUTANEOUS</fullName>
                </value>
                <value>
                    <fullName>ORAL; RESPIRATORY (INHALATION)</fullName>
                </value>
                <value>
                    <fullName>RESPIRATORY (INHALATION)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substance_Name__c</fullName>
        <label>Substance Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Insured Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Proprietary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insured Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>